test/should-fail/vsgc379end.f3
/*
 * @test/compile-error
 */
var nonNumericEnd = [17.."z"];
